# velostream

./: .env.docker  .gitignore  docker-compose.yml  package.json  pnpm-lock.yaml
prisma/: schema.prisma  seed.ts
src/plugins/: prisma.ts
src/queues/: video.queue.ts
src/routes/: upload.routes.ts
src/services/: storage.service.ts
src/types/: fastify.d.ts
src/workers/: probe.worker.ts
transcode-engine/: Cargo.toml  Dockerfile
transcode-engine/src/: main.rs  s3upload.rs
velostream-api/: .dockerignore  Dockerfile  README.md  benchmark-results.csv  benchmark-results.json  benchmark.ts  notes.txt  package.json  pnpm-lock.yaml  prisma.config.ts  test-presign.js
velostream-api/prisma/: schema.prisma
velostream-api/public/: index.html
velostream-api/src/: index.ts
velostream-api/src/queues/: video.queue.ts
velostream-api/src/routes/: benchmark.routes.ts  internal.routes.ts  upload.routes.ts
velostream-api/src/services/: storage.service.ts
velostream-api/src/workers/: probe.worker.ts  transcode.worker.ts
